<resources>
    <string name="app_name">Crack Detection</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_skip_button">Skip</string>
    <string name="main_vision_button">EXIT</string>
    <string name="main_nlp_button">Language</string>

    <string name="vision_list_image_classification_button">Image Classification</string>
    <string name="image_classification_title">Crack Detection</string>
    <string name="image_classification_results_header_row_name">Classification</string>
    <string name="image_classification_results_header_row_score">Score</string>

    <string name="text_classification">Text Classification</string>

    <string name="welcome_page_title">Welcome</string>
    <string name="welcome_page_description">PyTorch mobile demo application</string>

    <string name="welcome_page_image_classification_title">Image Classification</string>
    <string name="welcome_page_image_classification_description">Image classification examples run packaged inside app models using output of camera</string>

    <string name="welcome_page_nlp_title">Text Classification</string>
    <string name="welcome_page_nlp_description">Text classification examples run packaged inside app models on user entered text</string>

    <string name="vision_card_qmobilenet_title">Live</string>
    <string name="vision_card_qmobilenet_description">备注说明</string>

    <string name="vision_card_resnet_title">Take a photo</string>
    <string name="vision_card_resnet_description">备注说明</string>

    <string name="select_a_picture_title">Select a picture</string>
    <string name="select_a_picture_description">备注说明</string>


    <string name="nlp_card_lstm_title">Text Classification.\nLSTM model trained on Reddit comments dataset. </string>
    <string name="nlp_card_lstm_description">Predicts subreddit by given comment.\nInput is uint8 1xN shaped tensor, where N is the length of text\'s bytes representation in utf-8 encoding. Output classes are subreddits.</string>
    <string name="clear">Clear</string>
    <string name="text_classification_topic">Topic</string>
    <string name="text_classification_score">Score</string>
    <string name="error_dialog_text">Sorry there was an error.</string>
    <string name="text_classification_edittext_hint">Something like a reddit comment...</string>

    <string name="take_a_photo_button">Photographying</string>
    <string name="select_a_picture_button">Image Selection</string>
    <string name="Live_button">Real Time</string>
    <string name="save">Save</string>

</resources>
