<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/list_title_margin_top"
        android:text="@string/main_vision_button"
        android:textAppearance="@style/TextAppearanceMainVisionNlp" />

    <org.pytorch.demo.ListCardView
        android:id="@+id/vision_card_qmobilenet_click_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        app:titleRes="@string/vision_card_qmobilenet_title"
        app:descriptionRes="@string/vision_card_qmobilenet_description"
        android:elevation="1dp"/>

    <org.pytorch.demo.ListCardView
        android:id="@+id/take_a_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/vision_card_resnet_description"
        app:titleRes="@string/vision_card_resnet_title" />

    <org.pytorch.demo.ListCardView
        android:id="@+id/select_a_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/select_a_picture_description"
        app:titleRes="@string/select_a_picture_title"

        />




</LinearLayout>